The key details above are from the key used below.
Signing works, the key is valid, just the warning is wrong.
The key details above are from the key used below.
| rLIBKLEO Libkleo | |||
| rLIBKLEO98c313adf1c9 Fix problem with expiration dates after 2038 on 32-bit systems | |||
| rLIBKLEO40b52f117053 Fix problem with expiration dates after 2038 on 32-bit systems | |||
As we are running as 32bit software on Windows, the "?" in the output below are a matter of course.
C:\Users\g10code.WIN-TEST3>gpg -K 7E7B2E24B1EB6868BF14CB8B26FE244745FD657A
gpg: NOTE: THIS IS A DEVELOPMENT VERSION!
gpg: It is only intended for test purposes and should NOT be
gpg: used in a production environment or with production keys!
sec brainpoolP256r1 2024-03-22 [SC] [verfällt: ????-??-??]
7E7B2E24B1EB6868BF14CB8B26FE244745FD657A
uid [ ultimativ ] g10code
ssb brainpoolP256r1 2024-03-22 [E] [verfällt: ????-??-??]C:\Users\g10code.WIN-TEST3>gpg -K --with-colon 7E7B2E24B1EB6868BF14CB8B26FE244745FD657A gpg: NOTE: THIS IS A DEVELOPMENT VERSION! gpg: It is only intended for test purposes and should NOT be gpg: used in a production environment or with production keys! sec:u:256:19:26FE244745FD657A:1711117062:2342304000::u:::scESC:::+::brainpoolP256r1:23::0: fpr:::::::::7E7B2E24B1EB6868BF14CB8B26FE244745FD657A: grp:::::::::6980875915E53771B6939644F90D2DFEDAF941D4: uid:u::::1711117062::50BCB1586E54548175A36C550806CE02B3B4D0CD::g10code::::::::::0: ssb:u:256:18:F64D1F778112196F:1711117062:2342304000:::::e:::+::brainpoolP256r1:23: fpr:::::::::6CBEB634611AE8D761369312F64D1F778112196F: grp:::::::::83D33321CF6561BA73AA1791F77CC923A32D3B9F:
Okay. 2342304000 in the colon output is 2044-03-23T00:00:00+00:00.
By the way, I think this proves my suspicion that the Windows code adds 12 hours twice to the desired expiration date (for dates in the "far" future). For other dates it sets the time information to noon.