Fix problem with expiration dates after 2038 on 32-bit systems

Interpret the expiration time of a subkey as unsigned 32-bit value (as
gpg does internally) and store time values as qint64 values.

GnuPG-bug-id: 7069